--- a/index.css
+++ b/index.css
@@ -116,17 +116,21 @@
     width: 50%;
     text-align: left;
 }
+.goat-content p{
+    display: flex;
+    gap: 8px;
+}
 h3{
     color: #0B0223;
     text-align: left;
-    font-size: 48px;
+    font-size: 3rem;
     font-weight: 600;
     margin-top: 120px;
     margin-bottom: 0;
 }
 h2{
     text-align: left;
-    font-size: 95px;
+    font-size: 5.9rem;
     font-weight: 800;
     background: linear-gradient(180deg, #F948B2 0%, #8758F1 100%);
     background-clip: text;
@@ -138,13 +142,13 @@ h2{
 p{
     color: #534C64;
     text-align: left;
-    font-size: 20px;
+    font-size: 1.25rem;
     font-weight: 500;
     margin-bottom: 17px;
 }
 .btn-primary{
     color: #FFF;
-    font-size: 20px;
+    font-size: 1.25rem;
     font-weight: 600;
     padding: 21px 40px;
     gap: 10px;
@@ -155,7 +159,7 @@ p{
 }
 .btn-primary-two{
     color: #FFF;
-    font-size: 20px;
+    font-size: 1.25rem;
     font-weight: 600;
     padding: 21px 40px;
     border: 0;
