--- a/index.css
+++ b/index.css
@@ -254,6 +254,124 @@ p{
     margin-bottom: 24px;
 }
 
+/*this is Instantly css*/
+.instantly-section{
+    box-sizing: border-box;
+    max-height: 1440px;
+    margin: 0 auto;
+}
+.anniversary-container{
+    max-width: 1440px;
+    height: auto;
+    margin: 0 auto;
+    height: 1100px;
+    display: flex;
+    gap: 120px;
+    justify-content: space-between;
+    align-items: center;
+}
+.anniversary-content{
+    width: 50%;
+    margin-right: 130px;
+    margin-bottom: 300px;
+}
+.anniversary-image{
+    width: 50%;
+}
+.anniversary-image img{
+    width: 634px;
+    height: 650px;    
+}
+.anniversary-second-image img{
+    width: 318px;
+    height: 365px;
+    position: relative;
+    bottom: 295px;
+    right: 150px;
+}
+.anniversary-headline, .anniversary-headline-firstline{
+    color: #0B0223;
+    font-size: 3rem;
+    font-weight: 700;
+    text-align: right;
+    margin: 0;
+}
+.anniversary-headline-firstline{
+    background: linear-gradient(180deg, #F948B2 0%, #8758F1 100%);
+    background-clip: text;
+    -webkit-background-clip: text;
+    -webkit-text-fill-color: transparent;
+}
+.anniversary-blog{
+    color: #534C64;
+    text-align: right;
+    font-size: 1.1rem;
+    font-weight: 400;
+    padding-bottom: 24px;
+}
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+@media screen and (max-width: 576px) {
+    
+}
+
+
+
+
 
 
 
