--- a/index.css
+++ b/index.css
@@ -148,6 +148,14 @@ p{
     font-weight: 500;
     margin-bottom: 17px;
 }
+.goat-blog{
+    display: grid;
+    grid-template-rows: repeat(3, 1fr);
+}
+.botton-contain{
+    display: flex;
+    gap: 20px;
+}
 .btn-primary{
     color: #FFF;
     font-size: 1.25rem;
@@ -203,7 +211,7 @@ p{
     width: 60%;
     margin-left: 20px;
 }
-.we-are-image image{
+.we-are-image img{
     width: 100%;
 }
 .we-are-content{
@@ -366,7 +374,102 @@ p{
 
 
 @media screen and (max-width: 576px) {
+    .topnav-container{
+        flex-direction: column;justify-content: center;
+        align-items: center;
+        height: 300px;
+    }
+    .topnav-container .gamer-logo-content{
+        width: 100%;
+        justify-content: center;
+    }
+    .topnav-container .gamer-list-content{
+        flex-direction: column;
+        gap: 20px;
+    }
+    .gamer-logo-content img{
+        margin-left: 0;
+    }
+    .topnav-container .gamer-logo-content h1{
+        margin: 10px 0 15px 0px;
+    }
+    .GOAT-container{
+        flex-direction: column-reverse;
+        gap: 0;
+        height: 650px;
+    }
+    .GOAT-container .goat-image{
+        width: 100%;
+        margin: 0 15px;
+    }
+    .goat-content{
+        width: 100%;
+        min-height: 0px;
+        text-align: center;
+        padding-top: 50px;
+    }
+    .goat-content-inside{
+        padding-left: 0;
+    }
+    h3,h2{
+        margin: 0;
+        text-align: center;
+    }
+    h3{
+        font-size: 1.5rem;
+        padding-top: 40px;
+        padding-right: 15px;
+    }
+    h2{
+        font-size: 2.4rem;
+        padding-right: 30px;
+    }
+    .goat-content p{
+        font-size: 0.7rem;
+        margin: 0;
+        padding-left: 70px;
+    }
+    .goat-blog{
+        padding-bottom: 20px;
+        padding-top: 10px;
+    }
+    .btn-primary,.btn-primary-two{
+        padding: 7px 15px;
+        font-size: 0.7rem;
+        border-radius: 20px;
+        margin-right: 0;
+    }
+    .botton-contain{
+        gap: 5px;
+        justify-content: center;
+        margin-bottom: 0px;
+    }
+    .goat-section{
+        margin-bottom: 0;
+    }
     
+    .we-are-container{
+        flex-direction: column;
+        max-width: 100%;
+        justify-content: center;
+        align-items: center;
+        gap: 0px;
+        text-align: center;
+    }
+    .we-are-image{
+        width: 100%;
+        margin: 0;
+    }
+    .we-are-content{
+        width: 100%;
+        text-align: center;
+        margin-right: 0;
+        height: 200px;
+    }
+    .anniversary-container{
+        flex-direction: column;
+        gap: 10px;
+    }
 }
 
 
