--- a/index.css
+++ b/index.css
@@ -330,28 +330,41 @@ p{
 .carton-container .carton-content #carton img{
     width: 60px;
 }
-.carton-box1,.carton-box2,.carton-box3,.carton-box4,.carton-box5,.carton-box6,.carton-box7,.carton-box8,.carton-box9{
+.carton-container .carton-content>#carton{
     display: flex;
     justify-content: center;
     align-items: center;
     height: 80px;
     width: 280px;
-    border: 2px solid red;
 }
-#carton h6{
+#carton{
     color: #0B0223;
-    font-size: 20px;
+    font-size: 1.25rem;
     font-weight: 600;
+    border: 0;
+    background-color: #FFF;
+    text-align: center;
 }
 .carton-box6{
     margin-left: 100px;
 }
 
 .carton-content{
-    display: flex;
-    flex-wrap: wrap;
+    display: grid;
+    grid-template-columns: repeat(5, 1fr);
+    gap: 5px;
 }
-
+#carton:hover{
+    border: 1px solid #FF42A5;
+    border-radius: 40px;
+    color: #F948B2;
+    padding: 10px 20px;
+}
+#carton h6:hover ::before{
+    color: #0B0223;
+    font-size: 1.25rem;
+    font-weight: 600;
+}
 
 
 
@@ -537,8 +550,12 @@ p{
         gap: 10px;
         width: 410px;
         justify-content: center;
-        height: 850px;
+        height: 520px;
         margin-top: 20px;
+    }
+    .instantly-section{
+        height: 520px;
+        margin-top: 10px;
     }
     .anniversary-content{
         width: 100%;
@@ -548,6 +565,8 @@ p{
     .anniversary-content{
         width: 100%;
         margin-right: 0px;
+        margin-top: 50px;
+        height: 250px;
     }
     .anniversary-headline, .anniversary-headline-firstline{
         text-align: center;
@@ -559,7 +578,7 @@ p{
     }
     .anniversary-image{
         width: 100%;
-        height: 500px;
+        height: 400px;
     }
     .anniversary-image img{
         width: 87%;
@@ -571,6 +590,29 @@ p{
         height: 160px;
         margin-top: 160px;
         margin-left: 149px;
+    }
+    .carton-content{
+        grid-template-columns: repeat(3, 1fr);
+        padding: 10px;
+    }
+    .carton-container .carton-content>#carton {
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        gap: 10px;
+        height: 80px;
+        width: 100%;
+    }
+    .carton-box6{
+        margin-left: 0;
+    }
+    .carton-container .carton-content #carton img{
+        width: 25px;
+    }
+    #carton{
+        color: #0B0223;
+        font-size: 0.7rem;
+        font-weight: 600;
     }
 }
 
