--- a/index.css
+++ b/index.css
@@ -456,6 +456,19 @@ p{
     margin-top: 0;
 }
 
+.list-container{
+    display: grid;
+    grid-template-columns: repeat(6, 1fr);
+    gap: 60px;
+    padding-top: 66px;
+}
+.list-container li a{
+    text-decoration: none; 
+    color: #FFF;
+    text-align: center;
+    font-size: 1.1rem;
+    font-weight: 600;
+}
 
 
 
