--- a/index.css
+++ b/index.css
@@ -377,6 +377,7 @@ p{
     display: flex;
     justify-content: center;
     align-items: center;
+    gap: 1rem;
     height: 80px;
     width: 260px;
 }
@@ -388,19 +389,29 @@ p{
     background-color: #FFF;
     text-align: center;
 }
+#carton{
+    max-width: 243px;
+    height: 80px;
+}
+#carton-one{
+    color: #0B0223;
+    font-size: 1.25rem;
+    font-weight: 600;
+    border: 0;
+    background-color: #FFF;
+    text-align: center;
+    display: flex;
+    justify-content: center;
+}
 .carton-container .carton-content .carton-box-6{
     margin-left: 155px;
 }
-.carton-container .carton-content .carton-box-1{
-    margin-left: 90px;
-}
+
 
 .carton-content{
     display: grid;
     grid-template-columns: repeat(5, 1fr);
-    grid-template-rows: auto;
     gap: 5px;
-    margin: 0 auto;
 }
 #carton:hover{
     border: 1px solid #FF42A5;
