--- a/index.css
+++ b/index.css
@@ -854,9 +854,11 @@ p{
         display: flex;
         gap: 5px;
         justify-content: center;
-        margin-top: 25px;
-        margin-right: 25px;
+        margin-top: 6px;
+        margin-right: 30px;
+        align-items: center;
     }
+    
     #carton-one>img{
         width: 30px;
         height: 30px;
